--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <navbar></navbar>
-<p>app component</p>
-<product-list></product-list>
+<div class="container my-3">
+    <div class="row">
+        <div class="col-12">
+            <product-list></product-list>
+        </div>
+    </div>
+</div>
+
