--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,13 @@
-<product></product>
-<product></product>
-<product></product>
-<product></product>
+ <div class="card mb-3">
+    <div class="row">
+        <div class="col-3">
+            <img src="/assets/images/{{ product.imageUrl }}" alt="" class="img-fluid rounded-start">
+        </div>
+        <div class="col-9">
+            <div class="card-body">
+                <h5 class="card-title">{{ product.name }}</h5>
+                <p class="cart-text">{{ product.description }}</p>
+            </div>
+        </div>
+    </div>
+</div>
