--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
- <div class="card mb-3">
+ <div *ngFor="let product of products" class="card mb-3">
     <div class="row">
         <div class="col-3">
             <img src="/assets/images/{{ product.imageUrl }}" alt="" class="img-fluid rounded-start">
@@ -11,3 +11,10 @@
         </div>
     </div>
 </div>
+
+
+<ul>
+    <li *ngFor="let p of productList">
+        {{ p }}
+    </li>
+</ul>
