--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,19 +1,40 @@
- <div *ngFor="let product of products" class="card mb-3">
+<div *ngFor="let product of products" >
+    <div *ngIf="product.isActive" class="card mb-3">
+        <div class="row">
+            <div class="col-3">
+                <img src="/assets/images/{{ product.imageUrl }}" alt="" class="img-fluid rounded-start">
+            </div>
+            <div class="col-9">
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="cart-text">{{ product.description }}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="alert alert-warning" *ngIf="products.length == 0">
+    no products
+</div>
+
+<div class="card mb-3" *ngIf="product.isActive">
     <div class="row">
         <div class="col-3">
-            <img src="/assets/images/{{ product.imageUrl }}" alt="" class="img-fluid rounded-start">
+            <img src="/assets/images/1.jpeg" alt="" class="img-fluid rounded-start">
         </div>
         <div class="col-9">
             <div class="card-body">
-                <h5 class="card-title">{{ product.name }}</h5>
-                <p class="cart-text">{{ product.description }}</p>
+                <h5 class="card-title">IPhone 22</h5>
+                <p class="cart-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos perspiciatis fuga quasi vitae veritatis numquam repellendus mollitia corporis. Iusto, consectetur?</p>
             </div>
         </div>
     </div>
 </div>
 
 
-<ul>
+
+<ul *ngIf="productList.length > 1">
     <li *ngFor="let p of productList">
         {{ p }}
     </li>
