--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="getProducts().length>0; else noProducts">
-    <ng-template [ngTemplateOutlet]="productList1" [ngTemplateOutletContext]="{products: getProducts()}"></ng-template>
-    <ng-template [ngTemplateOutlet]="productList2" [ngTemplateOutletContext]="{products: getProducts()}"></ng-template>
+<div *ngIf="products.length>0; else noProducts">
+    <ng-template [ngTemplateOutlet]="productList1" [ngTemplateOutletContext]="{products: products}"></ng-template>
+    <ng-template [ngTemplateOutlet]="productList2" [ngTemplateOutletContext]="{products: products}"></ng-template>
 </div>
 
 <ng-template #productList1 let-products="products">
