--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <navbar></navbar>
 <div class="container my-3">
     <div class="row">
-        <div class="col-12">
+        <div class="col-3">
+            <category-list></category-list>
+        </div>
+        <div class="col-9">
             <product-list></product-list>
         </div>
     </div>
