--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,12 +1,10 @@
 <div *ngIf="products.length>0; else noProducts">
-    <ng-template [ngTemplateOutlet]="productList1" [ngTemplateOutletContext]="{products: products}"></ng-template>
-    <ng-template [ngTemplateOutlet]="productList2" [ngTemplateOutletContext]="{products: products}"></ng-template>
+    <ng-template [ngTemplateOutlet]="productList" [ngTemplateOutletContext]="{products: products}"></ng-template>
 </div>
 
-<ng-template #productList1 let-products="products">
-    <h2>En çok satanlar</h2>
+<ng-template #productList let-products="products">
     <div *ngFor="let product of products" >
-        <div *ngIf="product.isActive" class="card mb-3">
+        <div *ngIf="product.isActive" class="card mb-3 p-1">
             <div class="row">
                 <div class="col-3">
                     <img src="/assets/images/{{ product.imageUrl }}" alt="" class="img-fluid rounded-start">
@@ -16,21 +14,6 @@
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="cart-text">{{ product.description }}</p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</ng-template>
-
-<ng-template #productList2 let-products="products">
-    <h2>En beğenilenler</h2>
-    <div class="row">
-        <div *ngFor="let product of products" class="col-3">
-            <div *ngIf="product.isActive" class="card mb-3">
-                <img src="/assets/images/{{ product.imageUrl }}" alt="" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="cart-text">{{ product.description }}</p>
                 </div>
             </div>
         </div>
