--- a/src/app/category-list/category-list.component.html
+++ b/src/app/category-list/category-list.component.html
@@ -1,5 +1,9 @@
 <div class="list-group">
-    <a *ngFor="let category of categories" href="#" class="list-group-item list-group-item-action">
+    <a *ngFor="let category of categories" 
+    (click)="selectCategory(category)" 
+    href="#" 
+    class="list-group-item list-group-item-action"
+    [class.active]="category == selectedCategory">
         {{ category.name }}
     </a>
 </div>
