--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,17 +1,4 @@
-<div class="card mb-3 p-1 border border-warning" *ngIf="selectedProduct">
-    <div class="row">
-        <div class="col-3">
-            <img src="/assets/images/{{ selectedProduct.imageUrl }}" alt="" class="img-fluid rounded-start">
-        </div>
-        <div class="col-9">
-            <div class="card-body">
-                <h5 class="card-title">{{ selectedProduct.name }}</h5>
-                <p class="cart-text">{{ selectedProduct.description }}</p>
-                <button (click)="unselectProduct()" class="btn btn-primary">Seçimi Kaldır</button>
-            </div>
-        </div>
-    </div>
-</div>
+<product [prd]="selectedProduct" *ngIf="selectedProduct"></product>
 
 <div *ngIf="products.length>0; else noProducts">
     <ng-template [ngTemplateOutlet]="productList" [ngTemplateOutletContext]="{products: products}"></ng-template>
