--- a/src/app/product-list/product/product.component.html
+++ b/src/app/product-list/product/product.component.html
@@ -1,12 +1,14 @@
-<div class="card mb-3">
+<div class="card mb-3 p-1 border border-warning">
     <div class="row">
         <div class="col-3">
-            <img src="/assets/images/1.jpeg" alt="" class="img-fluid rounded-start">
+            <img src="/assets/images/{{ prd.imageUrl }}" alt="" class="img-fluid rounded-start">
         </div>
         <div class="col-9">
             <div class="card-body">
-                <h5 class="card-title">IPhone 14</h5>
-                <p class="cart-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos perspiciatis fuga quasi vitae veritatis numquam repellendus mollitia corporis. Iusto, consectetur?</p>
+                <h5 class="card-title">{{ prd.name }}</h5>
+                <p class="cart-text">{{ prd.description }}</p>
+                <!-- <button (click)="unselectProduct()" class="btn btn-primary">Seçimi Kaldır</button> -->
+                <button  class="btn btn-primary">Seçimi Kaldır</button>
             </div>
         </div>
     </div>
