--- a/src/app/product-list/product/product.component.html
+++ b/src/app/product-list/product/product.component.html
@@ -7,8 +7,7 @@
             <div class="card-body">
                 <h5 class="card-title">{{ prd.name }}</h5>
                 <p class="cart-text">{{ prd.description }}</p>
-                <!-- <button (click)="unselectProduct()" class="btn btn-primary">Seçimi Kaldır</button> -->
-                <button  class="btn btn-primary">Seçimi Kaldır</button>
+                <button (click)="unselectProduct()" class="btn btn-primary">Seçimi Kaldır</button>
             </div>
         </div>
     </div>
